Fixing overflow-ed background

--- a/client/styles/flat.less
+++ b/client/styles/flat.less
@@ -29,6 +29,7 @@ div {
   font-family: sans-serif;
   height: 100vh;
   color: #444;
+  overflow: scroll;
 }
 
 .content {
